--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -29,4 +29,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 5000
-  type: LoadBalancer # Is se aapko ek URL milega
+  type: ClusterIP # Is se aapko ek URL milega
