--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -29,4 +29,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3000
-  type: LoadBalancer # Is se aapko ek URL milega
+  type: ClusterIP # LoadBalancer ki bajaye ClusterIP use karein
