--- a/Server/.env
+++ b/Server/.env
@@ -6,3 +6,4 @@ CLOUDINARY_CLOUD_NAME=dxtthl5w9
 CLOUDINARY_API_KEY=723935113188218 
 CLOUDINARY_API_SECRET=NIyadpMagp0d_50JUmbFM9EIpDw  
 
+# RESIZER_SERVICE_URL=http://localhost:5001/resize-and-upload
